# frechet_distance

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.html
docs/: frechet_distance.html  frechet_distance.js  frechet_distance.wasm  visualizer.html  visualizer.js  visualizer.wasm
frechet_dist_lib/: CMakeLists.txt  frechet_dist.c  frechet_dist.h  geometry.c  geometry.h
page/: frechet_distance.html  frechet_distance.js
src/: frechet_dist.c  frechet_dist.h  frechet_dist_types.h  geometry.c  geometry.h  main.c  visualizer.c  visualizer.h
visualizer/: visualizer.c  visualizer.h
